--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://mehdisolhan.github.io/react-todolist",
+  "homepage": "https://mehdisolhan.github.io/react-todolist/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.29",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
